feat: AA-ALABS-XX added README.md and refactored code